--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "react-stockcharts": "^0.7.0",
+    "react-table": "^6.8.0",
     "react-transition-group": "^1.2.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
