--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,14 @@ install:
     - "npm i"
 script:
     - "npm run build"
+deploy:
+    provider: s3
+    access_key_id: $AWS_KEY_ID
+    secret_access_key:
+        secure: $AWS_SECRET_KEY
+    bucket: $AWS_BUCKET
+    region: $AWS_REGION
+    skip_cleanup: true
+    local-dir: build
+    on:
+        branch: master
