--- a/package.json
+++ b/package.json
@@ -14,6 +14,15 @@
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "d3": "^5.0.0",
+    "d3-array": "1.2.1",
+    "d3-axis": "1.0.8",
+    "d3-brush": "1.0.4",
+    "d3-geo": "1.10.0",
+    "d3-scale": "2.0.0",
+    "d3-selection": "1.3.0",
+    "d3-shape": "1.2.0",
+    "d3-svg-legend": "2.25.6",
+    "d3-transition": "1.1.1",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
