--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
     "extends": "google",
-    "parser": "babel-eslint"
+    "parser": "babel-eslint",
+    "rules": {
+        "require-jsdoc": ["warn"]
+    }
 }
