--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ env:
 cache: pip
 before_install:
 - npm i -g npm@latest
+- sudo apt-get install build-essential
+- sudo apt-get install libgmp-dev
 install:
 - npm i
 script:
