--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ env:
 cache: pip
 before_install:
 - npm i -g npm@latest
-- sudo apt-get install build-essential
-- sudo apt-get install libgmp-dev
+- sudo n 9.4.0
 install:
 - npm i
 script:
