--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-stockcharts": "^0.7.0",
     "react-table": "^6.8.0",
     "react-transition-group": "^1.2.1",
+    "recharts": "^1.0.0-beta.10",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
